# pdf_agent_langgraph

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
src/: config_loader.py  file_analyzer.py  file_text_extractor.py  img_text_extractor.py  llm_client.py  logger.py  pdf_analyzer.py  pdf_organizer.py  pdf_text_extractor.py  state.py
tests/: test_type_detection.py
